fix BookingServiceImplTest